--- a/tox-docker2podman.ini
+++ b/tox-docker2podman.ini
@@ -33,18 +33,18 @@ commands=
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
   # configure lvm
-  ansible-playbook -vv -i {changedir}/hosts {toxinidir}/tests/functional/lvm_setup.yml
+  ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/tests/functional/lvm_setup.yml
 
-  ansible-playbook -vv -i {changedir}/hosts {toxinidir}/tests/functional/setup.yml
+  ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/tests/functional/setup.yml
 
-  ansible-playbook -vv -i {changedir}/hosts {toxinidir}/site-container.yml.sample --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/site-container.yml.sample --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 
-  ansible-playbook -vv -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/docker-to-podman.yml --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/docker-to-podman.yml --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
   "
 
