--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -40,10 +40,10 @@ commands=
   bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/setup.yml
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/setup.yml
 
-  non_container: ansible-playbook -vv -i "localhost," -c local {toxinidir}/tests/functional/dev_setup.yml --extra-vars "dev_setup=True change_dir={changedir} ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest}" --tags "vagrant_setup"
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+  non_container: ansible-playbook -vv --diff -i "localhost," -c local {toxinidir}/tests/functional/dev_setup.yml --extra-vars "dev_setup=True change_dir={changedir} ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest}" --tags "vagrant_setup"
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       yes_i_know=true \
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
@@ -55,7 +55,7 @@ commands=
 
 # upgrade mons
 # mon1
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit mon1 --tags=mons --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit mon1 --tags=mons --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -64,7 +64,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # mon0 and mon2
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit 'mons:!mon1' --tags=mons --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit 'mons:!mon1' --tags=mons --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -73,7 +73,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # upgrade mgrs
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=mgrs --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=mgrs --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -82,7 +82,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # upgrade osd1
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit=osd1 --tags=osds --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit=osd1 --tags=osds --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -91,7 +91,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # upgrade remaining osds (serially)
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit='osds:!osd1' --tags=osds --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit='osds:!osd1' --tags=osds --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -100,7 +100,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # upgrade rgws
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=rgws --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=rgws --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
@@ -109,7 +109,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 # post upgrade actions
-  ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=post_upgrade --extra-vars "\
+  ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --tags=post_upgrade --extra-vars "\
       ireallymeanit=yes \
       ceph_dev_branch={env:UPDATE_CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:UPDATE_CEPH_DEV_SHA1:latest} \
