--- a/roles/ceph-mds/defaults/main.yml
+++ b/roles/ceph-mds/defaults/main.yml
@@ -22,11 +22,15 @@ copy_admin_key: false
 ceph_mds_docker_memory_limit: "{{ ansible_facts['memtotal_mb'] }}m"
 ceph_mds_docker_cpu_limit: 4
 
-# we currently for MDS_NAME to hostname because of a bug in ceph-docker
-# fix here: https://github.com/ceph/ceph-docker/pull/770
-# this will go away soon.
-ceph_mds_docker_extra_env: -e MDS_NAME={{ ansible_facts['hostname'] }}
 ceph_config_keys: [] # DON'T TOUCH ME
+# If you want to add parameters, you should retain the existing ones and include the new ones.
+ceph_mds_container_params:
+  volumes:
+    - /var/lib/ceph/bootstrap-mds:/var/lib/ceph/bootstrap-mds:z
+    - /var/lib/ceph/mds/{{ cluster }}-{{ ansible_facts['hostname'] }}:/var/lib/ceph/mds/{{ cluster }}-{{ ansible_facts['hostname'] }}:z
+  args:
+    - -f
+    - -i={{ ansible_facts['hostname'] }}
 
 
 ###########
