--- a/roles/ceph-osd/defaults/main.yml
+++ b/roles/ceph-osd/defaults/main.yml
@@ -160,7 +160,6 @@ ceph_config_keys: [] # DON'T TOUCH ME
 # Resource limitation
 # For the whole list of limits you can apply see: docs.docker.com/engine/admin/resource_constraints
 # Default values are based from: https://access.redhat.com/documentation/en-us/red_hat_ceph_storage/2/html/red_hat_ceph_storage_hardware_guide/minimum_recommendations
-# These options can be passed using the 'ceph_osd_docker_extra_env' variable.
 ceph_osd_docker_memory_limit: "{{ ansible_facts['memtotal_mb'] }}m"
 ceph_osd_docker_cpu_limit: 4
 
@@ -181,8 +180,21 @@ ceph_osd_docker_prepare_env: -e OSD_JOURNAL_SIZE={{ journal_size }}
 
 # ACTIVATE DEVICE
 #
-ceph_osd_docker_extra_env:
 ceph_osd_numactl_opts: ""
+
+# If you want to add parameters, you should retain the existing ones and include the new ones.
+ceph_osd_container_params:
+  volumes:
+    - /dev:/dev
+    - /var/lib/ceph/bootstrap-osd/ceph.keyring:/var/lib/ceph/bootstrap-osd/ceph.keyring:z
+    - /var/lib/ceph/osd/{{ cluster }}-"${OSD_ID}":/var/lib/ceph/osd/{{ cluster }}-"${OSD_ID}":z
+    - /var/run/udev/:/var/run/udev/
+    - /run/lvm/:/run/lvm/
+  envs:
+    OSD_ID: ${OSD_ID}
+  args:
+    - -f
+    - -i=${OSD_ID}
 
 ###########
 # SYSTEMD #
