ceph-exporter: add installation role
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/infrastructure-playbooks/add-mon.yml
+++ b/infrastructure-playbooks/add-mon.yml
@@ -101,6 +101,11 @@
         name: ceph-crash
       when: containerized_deployment | bool
 
+    - name: Import ceph-exporter role
+      ansible.builtin.import_role:
+        name: ceph-exporter
+      when: containerized_deployment | bool
+
 - name: Update config file on OSD nodes
   hosts: osds
   gather_facts: true
