--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -2,6 +2,7 @@
 # dir really is. 
 [pytest]
 markers =
+  ceph_exporter: environment with ceph exporter enabled
   ceph_crash: environment with ceph crash enabled
   dashboard: environment with dashboard enabled
   no_docker: environment without containers
